server + frontend works for now

--- a/client/src/main.scss
+++ b/client/src/main.scss
@@ -2,6 +2,8 @@
 @import "@fontsource/lato/700.css";
 @import "@fontsource/lato/latin-400.css";
 @import "@fontsource/lato/latin-700.css";
+@import "vue3-perfect-scrollbar/dist/vue3-perfect-scrollbar.css";
+@import "vuetify/dist/vuetify.css";
 
 body, html {
   font-family: 'Lato', sans-serif;
