add docker container build

--- a/client/src/main.scss
+++ b/client/src/main.scss
@@ -28,6 +28,9 @@ $font-family: 'Lato';
   .v-window, .v-window-item {
     height: 100%;
   }
+  .v-switch__thumb {
+    color: rgb(100, 100, 100);
+  }
   input {
     color: #b9bbbe;
   }
